metadata/force-app/main/default/objects/Standard_Definitions__c/Standard_Definitions__c.object-meta.xml
<CustomObject>
    <description>Standard Definitions as used in the SOW for our customers</description>
    <label>Standard Definition</label>
    <nameField>
        <label>Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>