metadata/force-app/main/default/objects/Standard_Definitions__c/fields/Definition_description_English__c.field-meta.xml
<CustomField>
    <fullName>Definition_description_English__c</fullName>
    <label>English Definition description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>