metadata/force-app/main/default/objects/Standard_Definitions__c/fields/Definition_description_French__c.field-meta.xml
<CustomField>
    <fullName>Definition_description_French__c</fullName>
    <label>French Definition description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>