metadata/force-app/main/default/objects/Standard_Definitions__c/fields/Definition_description_German__c.field-meta.xml
<CustomField>
    <fullName>Definition_description_German__c</fullName>
    <label>German Definition description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>