metadata/force-app/main/default/objects/Standard_Definitions__c/fields/French_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>French_Definition_Name__c</fullName>
    <label>French Definition Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>