metadata/force-app/main/default/objects/Standard_Definitions__c/fields/German_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>German_Definition_Name__c</fullName>
    <label>German Definition Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>