metadata/force-app/main/default/objects/Standard_Definitions__c/listViews/All_definitions.listView-meta.xml
<ListView>
    <fullName>All_definitions</fullName>
    <columns>NAME</columns>
    <columns>Definition_description_English__c</columns>
    <columns>French_Definition_Name__c</columns>
    <columns>Definition_description_French__c</columns>
    <columns>German_Definition_Name__c</columns>
    <columns>Definition_description_German__c</columns>
    <filterScope>Everything</filterScope>
    <label>All definitions</label>
</ListView>